[package]
name = "curved-space"
version = "0.1.0"
edition = "2021"

# Dependencies taken from
# https://github.com/grovesNL/glow/blob/main/examples/hello/Cargo.toml

[dependencies]
glow = "0.13.1"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "0.31.2", optional = true }
glutin-winit = { version = "0.4.2", optional = true}
winit = { version = "0.29.10", features = ["rwh_05"], optional = true }
raw-window-handle = { version = "0.5", optional = true }
sdl2 = { version = "0.35", optional = true }
egui = "0.27"
egui_glow = { version = "0.27", features=["winit"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features=["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
wasm-bindgen = { version = "0.2" }

[features]
glutin_winit = ["glutin", "glutin-winit", "winit", "raw-window-handle"]
