[package]
name = "curved-space"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
glow = "0.13.1"
raw-window-handle = { version = "0.5", optional = true }
egui = "0.27"
egui_glow = { version = "0.27", features=["winit"] }
web-time = "*" # Match version used by winit?
log = "0.4"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
winit = { version = "0.29.10", features = ["rwh_05"], optional = true }
glutin = { version = "0.31.2", optional = true }
glutin-winit = { version = "0.4.2", optional = true}
sdl2 = { version = "0.35", optional = true }
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = { version = "0.29.10", features = ["rwh_05"] }
web-sys = { version = "0.3", features=["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
wasm-bindgen = { version = "0.2" }
console_log = { version = "1", features = ["color"] }
console_error_panic_hook = "0.1"

[features]
glutin_winit = ["glutin", "glutin-winit", "winit", "raw-window-handle"]
